[package]
author = "marsupialgutz"
description = "Small terminal welcome program written in rust"
edition = "2021"
license-file = "LICENSE"
name = "hello-rs"
readme = "README.md"
repository = "https://github.com/marsupialgutz/hello-rs"
version = "2.4.1"
excluse = [".gitignore"]

[dependencies]
argparse = "0.2"
chrono = "0.4"
mpris = "2.0.0-rc2"
once_cell = "1.10"
openweathermap = "0.2"
serde = {version = "1.0", features = ["derive"]}
substring = "1.4"
sys-info = "0.9.1"
systemstat = "0.1"
tokio = {version = "1", features = ["full"]}
toml = "0.5.9"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
unicode-segmentation = "1.9"
whoami = "1.2.1"
