[package]
authors = ["marsupialgutz"]
description = "Small terminal welcome program written in rust"
edition = "2021"
license-file = "LICENSE"
name = "draconis"
readme = "README.md"
repository = "https://github.com/marsupialgutz/draconis"
version = "2.4.8"

[workspace]

[dependencies]
colored = "2.0.0"
dirs = "4.0.0"
lazy_static = "1.4.0"
sysinfo = "0.27.0"
# argparse = "0.2"
# chrono = "0.4"
# mpris = "2.0.0-rc2"
# once_cell = "1.10"
# openweathermap = "0.2"
# serde = {version = "1.0", features = ["derive"]}
# substring = "1.4"
# sys-info = "0.9.1"
# systemstat = "0.1"
tokio = { version = "1", features = ["full"] }
toml = "0.5.9"
unicode-width = "0.1.10"
users = "0.11.0"
# whoami = "1.2.1"
# text_io = "0.1"
# regex = "1.7.0"
